--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -907,7 +907,7 @@
 
                             <tr class="design-row">
                                 <td style="width: 160px">
-                                    Arrowhead Weight: {{arrow.arrowhead.weight}} lbs
+                                    Arrowhead Weight: {{arrow.arrowhead.weight}}lbs
                                 </td>
                                 <td>
                                     <input type="range" min="0.015" max="0.1" step="0.005" name="data.bowDesign.arrows.{{id}}.arrowhead.weight" value="{{arrow.arrowhead.weight}}" data-dtype="Number">
@@ -924,7 +924,7 @@
                                     Resulting arrow stats:
                                 </td>
                                 <td>
-                                    {{arrow.weight}} lbs, {{arrow.cost}} $
+                                    {{arrow.weight}}lbs, {{arrow.cost}}$
                                 </td>
                                 <td class="question-container" id="arrow-stats">
                                     <div class="question-button">
@@ -1707,7 +1707,10 @@
                                     Baseline Weight
                                 </td>
                                 <td>
-                                    Unloaded: {{round data.data.firearmDesign.weight 100}} Per Shot: {{round data.data.firearmDesign.baseWeightPerShot 100}} Ammunition: {{round data.data.firearmDesign.ammoWeight 100}} Loaded: {{round this.data.data.firearmDesign.loadedWeight 100}}
+                                    Unloaded: {{round data.data.firearmDesign.weight 100}}lbs</br>
+                                    Per Shot: {{round data.data.firearmDesign.baseWeightPerShot 100}}lbs</br>
+                                    Ammunition: {{round data.data.firearmDesign.ammoWeight 100}}lbs</br>
+                                    Loaded: {{round this.data.data.firearmDesign.loadedWeight 100}}lbs
                                 </td>
                                 <td class="question-container" id="weight-output">
                                     <div class="question-button">
@@ -1778,7 +1781,7 @@
                                     Baseline Cost Per Shot
                                 </td>
                                 <td>
-                                    Base Cost: {{round data.data.firearmDesign.cps 100}}
+                                    Base Cost: {{round data.data.firearmDesign.cps 100}}$
                                 </td>
                                 <td class="question-container" id="cps-output">
                                     <div class="question-button">
@@ -1792,9 +1795,9 @@
                                     Baseline Cost
                                 </td>
                                 <td>
-                                    Base Cost: {{round data.data.firearmDesign.baseCost 100}}
-                                    CF: {{data.data.firearmDesign.cf}}
-                                    Final Cost: {{round data.data.firearmDesign.finalCost 100}}
+                                    Base Cost: {{round data.data.firearmDesign.baseCost 100}}$</br>
+                                    CF: {{data.data.firearmDesign.cf}}</br>
+                                    Final Cost: {{round data.data.firearmDesign.finalCost 100}}$
                                 </td>
                                 <td class="question-container" id="cost-output">
                                     <div class="question-button">
@@ -2142,7 +2145,7 @@
                                     Weight Per Shot
                                 </td>
                                 <td>
-                                    {{round ammo.wps 100}}
+                                    {{round ammo.wps 100}}lbs
                                 </td>
                                 <td class="question-container" id="wps">
                                     <div class="question-button">
@@ -2156,7 +2159,7 @@
                                     Cost Per Shot
                                 </td>
                                 <td>
-                                    {{round ammo.cps 100}}
+                                    {{round ammo.cps 100}}$
                                 </td>
                                 <td class="question-container" id="cps">
                                     <div class="question-button">
@@ -2214,7 +2217,7 @@
                     {{#each data.data.ranged as |ammo id|}}
                     <tr>
                         <td>{{../data.data.tl}}</td>
-                        <td>{{../data.name}} - {{ammo.name}}</td>
+                        <td>{{ammo.name}}</td>
                         <td>{{ammo.damageInput}} ({{ammo.armourDivisor}}) {{ammo.damageType}}</td>
                         <td>{{ammo.acc}}</td>
                         <td>{{ammo.range}}</td>
