#8 Updating init process of Custom Firearms and input validation

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1062,6 +1062,7 @@
                 <div class="design-block">
                     <div style="width: 50%;">
                         <h2 class="bold" style="text-align: center;">Firearm Options</h2>
+                        <input style="display: none;" type="checkbox" name="data.firearmDesign.initComplete" {{checked data.data.firearmDesign.initComplete}} data-dtype="Boolean"/>
                         <table>
                             <tr class="design-row">
                                 <td style="width: 150px">
