#8 Added concussion versions of HE and LE. They have the same TL and other stats, but exist only to make things easier by ditching frag damage.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1978,6 +1978,7 @@
                                             <option value="solid">Solid</option>
                                             {{#ifCond ../data.data.tl '>=' 4 }}
                                                 <option value="le">Low Explosive</option>
+                                                <option value="lec">Low Explosive Concussion</option>
                                                 {{#ifCond ../data.data.firearmDesign.projectileCalibre '>=' 5 }}
                                                     <option value="shotshell">Shotshell</option>
                                                 {{/ifCond}}
@@ -1995,6 +1996,7 @@
                                                 <option value="frangible">Frangible</option>
                                                 <option value="apex">Armour Piercing Explosive</option>
                                                 <option value="he">High Explosive</option>
+                                                <option value="hec">High Explosive Concussion</option>
                                                 <option value="saphe">Semi Armour Piercing High Explosive</option>
                                                 <option value="saphec">Semi Armour Piercing High Explosive Concussion</option>
                                                 <option value="duplex">Duplex</option>
