#8 Adding SAPLE with concussion instead of frag

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1989,6 +1989,7 @@
                                             {{#ifCond ../data.data.tl '>=' 5 }}
                                                 <option value="hp">Hollow Point</option>
                                                 <option value="saple">Semi Armour Piercing Low Explosive</option>
+                                                <option value="saplec">Semi Armour Piercing Low Explosive Concussion</option>
                                             {{/ifCond}}
                                             {{#ifCond ../data.data.tl '>=' 6 }}
                                                 <option value="ap">Armour Piercing</option>
