--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -2083,7 +2083,7 @@
                             {{#if (eq ammo.projectile "mf")  }}
                             <tr class="design-row">
                                 <td style="line-height: 27.5px">
-                                    Number of Shots
+                                    Number of Projectiles
                                 </td>
                                 <td>
                                     <input type="text" name="data.firearmDesign.ammunition.{{id}}.projectiles" value="{{ammo.projectiles}}" data-dtype="Number"/>
@@ -2097,7 +2097,7 @@
                             </tr>
                             <tr class="design-row">
                                 <td style="line-height: 27.5px">
-                                    Max Number of Shots
+                                    Max Number of Projectiles
                                 </td>
                                 <td colspan="2">
                                     pi++: {{../data.data.firearmDesign.maxHPiF}} pi+: {{../data.data.firearmDesign.maxLPiF}} pi: {{#if ../data.data.firearmDesign.highEnergy}} {{../data.data.firearmDesign.maxSPiF}} {{else}} {{../data.data.firearmDesign.maxPiF}} {{/if}}
